[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "investment"
version = "2.0.0"
description = "Personal investment portfolio management system (SQLite-backed CLI)"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "PyYAML>=6.0",
    "pydantic>=2.6",
    "Jinja2>=3.1",
    "akshare>=1.12",
    "anthropic>=0.39.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
]

[project.scripts]
inv = "investment.cli.__main__:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"investment.core" = ["schema.sql"]
"investment.reports" = ["templates/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
